JC cambios generales

--- a/ManejoPresupuesto/appsettings.json
+++ b/ManejoPresupuesto/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=manejopresupuestoJH.mssql.somee.com; Database=manejopresupuestoJH; User Id=mnjpresupuestoJH_SQLLogin_1;Password=1663s6pyyu; TrustServerCertificate=True"    
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
