--- a/ManejoPresupuesto/appsettings.json
+++ b/ManejoPresupuesto/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=manejopresupuestoJH.mssql.somee.com; Database=manejopresupuestoJH; User Id=mnjpresupuestoJH_SQLLogin_1;Password=1663s6pyyu; TrustServerCertificate=True"    
+    "DefaultConnection": "Server=localhost; Database=ManejoPresupuesto; Integrated Security=true" 
   },
   "Logging": {
     "LogLevel": {
